[gd_scene load_steps=13 format=2]

[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/WuxueStateMachine.gd" type="Script" id=1]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/IdleState.tscn" type="PackedScene" id=2]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/HangingClimbState.tscn" type="PackedScene" id=3]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/HangingState.tscn" type="PackedScene" id=4]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/ClimbState.tscn" type="PackedScene" id=5]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/JumpFallingState.tscn" type="PackedScene" id=6]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/WalkState.tscn" type="PackedScene" id=7]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/JumpRisingState.tscn" type="PackedScene" id=8]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/JumpUpState.tscn" type="PackedScene" id=9]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/RollingState.tscn" type="PackedScene" id=10]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/JumpDownState.tscn" type="PackedScene" id=11]
[ext_resource path="res://FrameWork/Fight/Wu/wuxue/StateMachine/States/RunState.tscn" type="PackedScene" id=12]

[node name="WuxueStateMachine" type="Node2D"]
script = ExtResource( 1 )

[node name="Idle" parent="." instance=ExtResource( 2 )]

[node name="Climb" parent="." instance=ExtResource( 5 )]

[node name="HangingClimb" parent="." instance=ExtResource( 3 )]

[node name="Hanging" parent="." instance=ExtResource( 4 )]

[node name="JumpDown" parent="." instance=ExtResource( 11 )]

[node name="JumpFalling" parent="." instance=ExtResource( 6 )]

[node name="JumpRising" parent="." instance=ExtResource( 8 )]

[node name="JumpUp" parent="." instance=ExtResource( 9 )]

[node name="Rolling" parent="." instance=ExtResource( 10 )]

[node name="Walk" parent="." instance=ExtResource( 12 )]

[node name="Walk2" parent="." instance=ExtResource( 7 )]
